--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "db-local": "^3.1.0",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "db-local": "3.1.0",
+    "ejs": "3.1.10",
+    "express": "4.19.2",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
     "standard": "^17.1.0"
