--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "db-local": "3.1.0",
     "ejs": "3.1.10",
