--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "description": "",
   "dependencies": {
     "bcrypt": "5.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "ejs": "3.1.10",
     "express": "4.19.2",
     "jsonwebtoken": "9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3"
+    "mongodb": "6.8.0",
+    "mongoose": "8.5.3"
   },
   "devDependencies": {
     "standard": "^17.1.0"
